# bom-etl-platform

./: .env.template  .gitignore  README.md  pyproject.toml
docs/: Pipeline Stages.md  SQL Model.md  Scheduling and Automation.md
src/bom_processing/: constants.py
src/bom_processing/extract/: get_bom_paths.py  read_boms_from_excel.py
src/bom_processing/load/: load_to_sql.py
src/bom_processing/orchestration/: process_boms.py
src/bom_processing/sql/: insert_staging_into_history_table.sql  refresh_example_bom_final_current_table.sql  refresh_example_bom_final_table.sql
src/bom_processing/transform/: transformations.py
src/bom_processing/validation/: column_validation.py
src/config/: config.py  logging_config.py
src/etl/: folder_scraping_etl.py  staging_folder_etl.py
src/upload_gui/: gui.py
tests/bom_processing/extract/: test_get_bom_paths.py
tests/data/: test_metal_list.xls  test_sheet_list - missing column.xls  test_sheet_list - missing values.xls  test_sheet_list.xls  test_timber_list - Copy.xls  test_timber_list - dtype error.xls  test_timber_list - missing column.xls  test_timber_list - missing values.xls
